--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,10 @@ sc-view.visible {
     z-index: -1;
     background: rgb(128,0,64);
 }
+.view-flip {
+    z-index: -1;
+    background: rgb(0,64,128);
+}
 .view-swipe {
     z-index: -1;
     overflow-y: hidden;
@@ -182,6 +186,7 @@ sc-view.visible {
 .view-about {
     z-index: -1;
     background: rgb(64,0,128);
+    font-size: 24px;
 }
 .view-imagezoomer {
     z-index: -1;
